tests/reference/asr-const_02-fce29b7.stderr
semantic error: Targets with Const[i32] type cannot be re-assigned.
 --> tests/errors/const_02.py:5:5
  |
5 |     x = 5
  |     ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
